@@ -1,3 +1,6 @@
+2010-05-05  Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Allow filesystem with no MDT and OST (ticket #39).
+
 2010-04-09  Stephane Thiell  <stephane.thiell@cea.fr>
 	* Release: 0.906
 
